# tennis

./: .gitignore  README.md  clean data.ipynb  get_data.py  model.ipynb  model.py  pyproject.toml
.ipynb_checkpoints/: clean data-checkpoint.ipynb  model-checkpoint.ipynb
tennis_data/: 2000.xls  2005.xls  2019.xlsx
