[tool.poetry]
name = "tennis"
version = "0.1.0"
description = ""
authors = ["serg-e <smosesov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.4"
pandas = "^1.0.3"
seaborn = "^0.10.1"
sklearn = "^0.0"
fuzzywuzzy = "^0.18.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
